# funhub-api

./: .env.example  .gitignore  Makefile  README.md  README.txt  pyproject.toml  render.yaml  requirements.txt  uvicorn.local.toml
app/: main.py
app/api/: __init__.py  auth.py  credits.py  games.py  health.py  leaderboard.py  players.py
app/core/: auth.py  config.py  supabase.py
funhub_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
